--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "sushant-portfolio",
   "version": "0.1.0",
-  "homepage": "https://SushantSriv.github.io ",
+  "homepage": "https://SushantSriv.github.io/portfolio",
   "scripts": {
     "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "npm run build",
