--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "sushant-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://SushantSriv.github.io/portfolio",
+  "homepage": ".",
   "scripts": {
     "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "npm run build",
