--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,30 +1,204 @@
 {
   "data": [
     {
-  "id": "R_kgDOO7jbdg",
-  "name": "Geo-Risk Prediction Dashboard",
-  "createdAt": "2025-06-14T12:39:30Z",
-  "url": "https://github.com/SushantSriv/Risikoprediksjon_for_Transport_og_Landbruk",
-  "description": "Interactive dashboard that combines 34 years of Norwegian accident data with real-time MET Norway forecasts to predict road & farmland risk. Models (Random Forest) served through FastAPI, visualised with React + Leaflet, bundled in Docker.",
-  "isFork": false,
+      "id": "R_kgDOO7jbdg",
+      "name": "Geo-Risk Prediction Dashboard",
+      "createdAt": "2025-06-14T12:39:30Z",
+      "url": "https://github.com/SushantSriv/Risikoprediksjon_for_Transport_og_Landbruk",
+      "description": "Interactive dashboard that combines 34 years of Norwegian accident data with real-time MET Norway forecasts to predict road & farmland risk. Models (Random Forest) served through FastAPI, visualised with React + Leaflet, bundled in Docker.",
+      "isFork": false,
 
-  "languages": [
-    { "name": "Python",     "iconifyClass": "logos-python" },
-    { "name": "FastAPI",    "iconifyClass": "simple-icons:fastapi", "color": "#009688" },
-    { "name": "React",      "iconifyClass": "simple-icons:react" ,   "color": "#61DAFB"},
-    { "name": "Vite",       "iconifyClass": "simple-icons:vite" },
-    { "name": "Leaflet",    "iconifyClass": "simple-icons:leaflet" },
-    { "name": "Docker",     "iconifyClass": "simple-icons:docker" }
-  ],
+      "languages": [
+        {
+          "name": "Python",
+          "iconifyClass": "logos-python",
+          "color": "#3776AB"
+        },
+        {
+          "name": "FastAPI",
+          "iconifyClass": "simple-icons:fastapi",
+          "color": "#009688"
+        },
+        {
+          "name": "React",
+          "iconifyClass": "simple-icons:react",
+          "color": "#61DAFB"
+        },
+        {
+          "name": "Vite",
+          "iconifyClass": "simple-icons:vite",
+          "color": "#646CFF"
+        },
+        {
+          "name": "Leaflet",
+          "iconifyClass": "simple-icons:leaflet",
+          "color": "#199900"
+        },
+        {
+          "name": "Docker",
+          "iconifyClass": "simple-icons:docker",
+          "color": "#2496ED"
+        }
+      ],
 
-  "dataSources": [
-  { "name": "MET Norway API",  "imageSrc": "met_norway.png" },
-  { "name": "Statens vegvesen", "imageSrc": "vegvesen.png" },
-  { "name": "OpenStreetMap",   "imageSrc": "osm.png" }
-  ],
+      "dataSources": [
+        {
+          "name": "MET Norway API",
+          "imageSrc": "met_norway.png"
+        },
+        {
+          "name": "Statens vegvesen",
+          "imageSrc": "vegvesen.png"
+        },
+        {
+          "name": "OpenStreetMap",
+          "imageSrc": "osm.png"
+        }
+      ],
 
-  "demoUrl": "https://www.youtube.com/embed/dQw4w9WgXcQ"
+      "demoUrl": "https://www.youtube.com/embed/dQw4w9WgXcQ"
+    },
+    {
+      "id": "R_kgDObzB2KQ",
+      "name": "Housing-Price Prediction API",
+      "createdAt": "2024-01-28T10:12:03Z",
+      "url": "https://github.com/SushantSriv/boligprediksjon-fastapi",
+      "description": "End-to-end MLOps demo: Scikit-Learn Random-Forest model served via FastAPI, containerised with Docker and auto-deployed by GitHub Actions.",
+      "isFork": false,
+
+      "languages": [
+        {
+          "name": "Python",
+          "iconifyClass": "logos:python"
+        },
+        {
+          "name": "FastAPI",
+          "iconifyClass": "simple-icons:fastapi",
+          "color": "#009688"
+        },
+        {
+          "name": "Docker",
+          "iconifyClass": "logos:docker-icon",
+          "color": "#2496ED"
+        },
+        {
+          "name": "GitHub Actions",
+          "iconifyClass": "simple-icons:githubactions",
+          "color": "#2088FF"
+        }
+      ],
+
+      "dataSources": [
+        {
+          "name": "StatBank bolig-CSV",
+          "iconifyClass": "mdi:database"
+        }
+      ],
+
+      "demoUrl": "https://www.youtube.com/embed/H8nCziM2JCs"
+    },
+    {
+      "id": "R_kgDOc8nVFA",
+      "name": "COVID-19 Data Lake on AWS",
+      "createdAt": "2023-09-02T08:44:19Z",
+      "url": "https://github.com/SushantSriv/COVID-19-Data-Pipeline-AWS-Python-Power-BI",
+      "description": "Serverless ETL: AWS Glue crawls Johns-Hopkins CSVs into S3, queried via Athena, visualised in Power BI dashboards.",
+      "isFork": false,
+
+      "languages": [
+        {
+          "name": "PySpark",
+          "iconifyClass": "simple-icons:apachespark",
+          "color": "#E25A1C"
+        },
+        {
+          "name": "AWS",
+          "iconifyClass": "simple-icons:amazonaws",
+          "color": "#FF9900"
+        },
+        {
+          "name": "Power BI",
+          "iconifyClass": "simple-icons:powerbi",
+          "color": "#F2C811"
+        },
+        {
+          "name": "Python",
+          "iconifyClass": "logos:python"
+        }
+      ],
+
+      "dataSources": [
+        {
+          "name": "Johns Hopkins CSSE",
+          "iconifyClass": "mdi:virus"
+        },
+        {
+          "name": "Our World in Data",
+          "iconifyClass": "mdi:chart-line"
+        }
+      ],
+
+      "demoUrl": "https://www.youtube.com/embed/kN1Czs0POfw"
+    },
+    {
+      "id": "R_kgDObR5ysg",
+      "name": "EXE Files Auto-Remover",
+      "createdAt": "2022-12-15T14:17:44Z",
+      "url": "https://github.com/SushantSriv/exe-files-automatic-remover",
+      "description": "Tiny desktop utility written in C# + PowerShell that scans engineering PCs and deletes obsolete binaries to free disk space.",
+      "isFork": false,
+
+      "languages": [
+        {
+          "name": "C#",
+          "iconifyClass": "simple-icons:csharp",
+          "color": "#239120"
+        },
+        {
+          "name": "PowerShell",
+          "iconifyClass": "simple-icons:powershell",
+          "color": "#5391FE"
+        }
+      ],
+
+      "dataSources": [],
+
+      "demoUrl": "https://www.youtube.com/embed/v7V3Cz2a7Y4"
+    },
+    {
+      "id": "R_kgDOdk7Yhg",
+      "name": "Text Summarizer (Thesis)",
+      "createdAt": "2021-05-10T09:02:55Z",
+      "url": "https://drive.google.com/file/d/1GvvxxNht4rp2MKw5ImC9OtXaLiz37W4C/view?usp=sharing",
+      "description": "Bachelor thesis project: extractive summaries for news & research using TextRank and Gensim; evaluated with ROUGE metrics.",
+      "isFork": false,
+
+      "languages": [
+        {
+          "name": "Python",
+          "iconifyClass": "logos:python"
+        },
+        {
+          "name": "Gensim",
+          "iconifyClass": "simple-icons:gensim",
+          "color": "#FFCA0F"
+        },
+        {
+          "name": "NLTK",
+          "iconifyClass": "simple-icons:nltk",
+          "color": "#3CB371"
+        }
+      ],
+
+      "dataSources": [
+        {
+          "name": "BBC News Corpus",
+          "iconifyClass": "simple-icons:bbc"
+        }
+      ],
+
+      "demoUrl": "https://www.youtube.com/embed/2B3p0kF2xlE"
     }
-  
+
   ]
 }
