--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -56,7 +56,7 @@
         }
       ],
 
-      "demoUrl": "https://www.youtube.com/embed/dQw4w9WgXcQ"
+      "demoUrl": "https://www.youtube.com/embed/lIDKO1tNgUs"
     },
     {
       "id": "R_kgDObzB2KQ",
