--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,7 +1,7 @@
 {
   "data": [
     {
-      "id": "R_kgDOO7jbdg",
+      "id": "R_kgDOO7jbdg_1",
       "name": "Geo-Risk Prediction Dashboard",
       "createdAt": "2025-06-14T12:39:30Z",
       "url": "https://github.com/SushantSriv/Risikoprediksjon_for_Transport_og_Landbruk",
@@ -69,7 +69,7 @@
       "demoUrl": "https://www.youtube.com/embed/lIDKO1tNgUs"
     },
     {
-      "id": "R_kgDObzB2KQ",
+      "id": "R_kgDObzB2KQ_2",
       "name": "Housing-Price Prediction API",
       "createdAt": "2024-01-28T10:12:03Z",
       "url": "https://github.com/SushantSriv/boligprediksjon-fastapi",
@@ -114,7 +114,7 @@
       "demoUrl": "https://www.youtube.com/embed/kSOjQf3MPO8"
     },
     {
-      "id": "R_kgDOc8nVFA",
+      "id": "R_kgDOc8nVFA_3",
       "name": "COVID-19 Data Lake on AWS",
       "createdAt": "2023-09-02T08:44:19Z",
       "url": "https://github.com/SushantSriv/COVID-19-Data-Pipeline-AWS-Python-Power-BI",
@@ -183,7 +183,7 @@
     },
 
     {
-      "id": "R_kgDOc8nVFA",
+      "id": "R_kgDOc8nVFA_4",
       "name": "Traffic Accident Data Analysis Norway",
       "createdAt": "2023-09-02T08:44:19Z",
       "url": "https://github.com/SushantSriv/TrafikkulykkeDataanalyse_Norge",
@@ -233,7 +233,7 @@
     },
 
     {
-      "id": "R_kgDOc8nVFA",
+      "id": "R_kgDOc8nVFA_6",
       "name": "Power BI report on Injuries & Accidents",
       "createdAt": "2023-09-02T08:44:19Z",
       "url": "https://github.com/SushantSriv/Vegvesen_data_analyse_BI",
@@ -276,7 +276,7 @@
     },
 
     {
-      "id": "R_kgDObR5ysg",
+      "id": "R_kgDObR5ysg_7",
       "name": "EXE Files Auto-Remover",
       "createdAt": "2022-12-15T14:17:44Z",
       "url": "https://github.com/SushantSriv/exe-files-automatic-remover",
@@ -303,7 +303,7 @@
 
 
     {
-      "id": "R_kgDOdk7Yhg",
+      "id": "R_kgDOdk7Yhg_8",
       "name": "Text Summarizer (Thesis)",
       "createdAt": "2021-05-10T09:02:55Z",
       "url": "https://drive.google.com/file/d/1GvvxxNht4rp2MKw5ImC9OtXaLiz37W4C/view?usp=sharing",
